# ticket_tracker

./: .gitignore  LICENSE  README.md  monitor_spiderman.py  pyproject.toml  spiderman.sh  state.json
.github/workflows/: py.yml  release.yml  rs.yml
docs/: RUST_PORT.md
examples/: config.example.json
py/: README.md
py/src/ticket_tracker/: __init__.py  __main__.py  cli.py  config.py  maoyan.py  notify.py  paths.py  presets.py
rs/: Cargo.toml  README.md  dev.sh
rs/src/: config.rs  lib.rs  main.rs  maoyan.rs  monitor.rs  notify.rs  paths.rs  presets.rs
rs/src/cli/: cinema.rs  config_cmd.rs  doctor.rs  films.rs  mod.rs  start.rs  stop.rs  test_cmd.rs  watch.rs
rs/src/tui/: actions.rs  cmd.rs  focus.rs  input.rs  mod.rs  modal.rs  panes.rs  ui.rs
src/ticket_tracker/: monitor.py  tui.py
