[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-tracker"
version = "1.2.0"
description = "猫眼影城影片预售监测工具 —— CLI + Textual TUI，支持 Discord 推送、防休眠、时段策略"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ticket-tracker contributors" }]
requires-python = ">=3.8"
keywords = ["maoyan", "ticket", "movie", "monitor", "cli", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.80,<1.0",
]

[project.urls]
"Source" = "https://github.com/kuicao55/ticket_tracker"
"Issues" = "https://github.com/kuicao55/ticket_tracker/issues"

[project.scripts]
tt = "ticket_tracker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_tracker"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ticket_tracker",
    "README.md",
    "LICENSE",
    "examples",
]
