[package]
name = "ticket-tracker"
version = "1.3.0"
edition = "2021"
description = "猫眼影城影片预售监测 CLI + TUI，Rust 重写版（CLI 1:1 对齐 py/，TUI 用 ratatui）"
license = "MIT"
repository = "https://github.com/kuicao55/ticket_tracker"
keywords = ["maoyan", "ticket", "movie", "monitor", "cli", "tui", "ratatui"]
categories = ["command-line-utilities"]




# Cargo.lock 必须提交给 binary crate
[[bin]]
name = "tt"
path = "src/main.rs"

[lib]
name = "ticket_tracker"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }

# Serde / time / errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "5"

# Misc
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shell-words = "1"
rand = "0.8"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
